// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-auth-fields spec: Render logic -> should render with a \`username\` and \`password\` field 1`] = `
<amplify-auth-fields formfields="username,password">
  <div class="auth-fields"></div>
</amplify-auth-fields>
`;

exports[`amplify-auth-fields spec: Render logic -> should render with no default values and a empty string 1`] = `
<amplify-auth-fields>
  <div class="auth-fields"></div>
</amplify-auth-fields>
`;
